fixed scrollbar issue on signUp modal

--- a/src/UI/modal/modal.css
+++ b/src/UI/modal/modal.css
@@ -5,8 +5,8 @@
 .modal_wrapper {
   animation: modal_slide_in_from_top .2s ease-in-out 1;
   background-color: white;
-  max-height: 90vh;
-  overflow-y: auto;
+  /* max-height: 90vh;
+  overflow-y: auto; */
   padding: 2.5px;
   position: fixed;
   top: 5%;
