--- a/src/user/SignUp/SignUp.css
+++ b/src/user/SignUp/SignUp.css
@@ -8,6 +8,8 @@ select:not(:-internal-list-box) {
   margin: 0 auto 0px auto;
   border: 1px solid rgb(200, 200, 200, 1);
   box-sizing: border-box;
+  max-height: 70vh;
+  overflow-y: auto;
   /* animation: fade_in .25s ease-in-out 1, blur_in .25s ease-in-out 1, slide_in_from_bottom.25s ease-in-out 1; */
 }
 
